agent-dialogue-core/ad-core-pv-claim-specification.yaml
apiVersion: v1
kind: Pod
metadata:
  name: agent-dialogue-core
spec:
  containers:
  - name: agent-dialogue-core  # container name
    image: agent-dialogue-core # image name
    volumeMounts:
    - mountPath: /mnt/adcoreserver
      name: adcoreserver
  volumes:
  - name: adcoreserver
    persistentVolumeClaim:
      claimName: fileserver-claim
      readOnly: false
