agent-dialogue-core/core_managed_cert_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: esp-core-ip
    # Enable this flag if we want to use the self-managed certificate
    networking.gke.io/managed-certificates: core-managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: esp-core-envoy
      port:
        number: 80
